kubernetes/base/model-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service
  namespace: sms-app
  labels:
    app: model-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: model-service
